@@ -223,7 +223,7 @@ class WikiRevision {
 
 		} elseif( $changed ) {
 			wfDebug( __METHOD__ . ": running onArticleEdit\n" );
-			Article::onArticleEdit( $this->title, 'skiptransclusions' ); // leave templatelinks for editUpdates()
+			Article::onArticleEdit( $this->title );
 
 			wfDebug( __METHOD__ . ": running edit updates\n" );
 			$article->editUpdates(
